policies/mutate-ressources.yaml
# mutate-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: default-resources
spec:
  rules:
  - name: inject-resources
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - (name): "*"
            resources:
              +(requests):
                memory: "64Mi"
                cpu: "50m"
              +(limits):
                memory: "256Mi"
                cpu: "200m"
